docs/21.12.31/최대 길이 연속부분수열.md
# 2021.12.31 (금요일)
### **<복습> 1. 최대 길이 연속부분수열**

Q. 0과 1로 구성된 길이가 N인 수열이 주어집니다. 여러분은 이 수열에서 최대 k번을 0을 1로 변 경할 수 있습니다.
   여러분이 최대 k번의 변경을 통해 이 수열에서 1로만 구성된 최대 길이의 연속부분수열을 찾는 프로그램을 작성하세요.
   만약 길이가 길이가 14인 다음과 같은 수열이 주어지고 k=2라면 1 1 0 0 1 1 0 1 1 0 1 1 0 1
   여러분이 만들 수 있는 1이 연속된 연속부분수열은
   1 1 0 0 <U>1 1 1 1 1 1 1 1</U> 0 1 이며 그 길이는 8입니다.

**<풀이 방식>**

```java
import java.util.*;
class Main {
   public static int solution (int n, int k, int[] a) {
      int answer = 0;
      for (int i = 0; i < n; i++) {
         if(a[i] == 0) {
            a[i] = 1;
            k--;
         }
         if(k == 0) {
            break;
         }
      }

      return answer;
   }

   public static void main(String[] args) {
      Scanner sc = new Scanner(System.in);
      int n = sc.nextInt();
      int k = sc.nextInt();
      int[] arr = new int[n];
      for (int i = 0; i < n; i++) {
         arr[i] = sc.nextInt();
      }
      System.out.print(solution(n, k, arr));
   }

}

```
**<다른 풀이>**
```java
import java.util.*;
class Main {
   public int solution(int n, int k, int[] arr) {
      int answer = 0, cnt = 0, lt = 0;
      for (int rt = 0; rt < n; rt++) {
         if (arr[rt] == 0) cnt++;
         while (cnt > k) {
            if (arr[lt] == 0) cnt--;
            lt++;
         }
         answer = Math.max(answer, rt - lt + 1);
      }
      return answer;
   }

   public static void main(String[] args) {
      Main T = new Main();
      Scanner kb = new Scanner(System.in);
      int n = kb.nextInt();
      int k = kb.nextInt();
      int[] arr = new int[n];
      for (int i = 0; i < n; i++) {
         arr[i] = kb.nextInt();
      }
      System.out.print(T.solution(n, k, arr));
   }
}
```